docs: document Base64 JWT secret usage; ci/docker: support JWT_SECRET_BASE64

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,6 +26,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=payflow
       - SPRING_DATASOURCE_PASSWORD=payflow
       - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET_BASE64=${JWT_SECRET_BASE64}
       - SPRING_PROFILES_ACTIVE=prod
     depends_on:
       db:
