--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,12 @@ jobs:
           java-version: '17'
 
       - name: Set JWT secret for tests
-        run: echo "JWT_SECRET=$(openssl rand -hex 64)" >> $GITHUB_ENV
+        run: echo "JWT_SECRET_BASE64=$(openssl rand -base64 64)" >> $GITHUB_ENV
 
       - name: Build & run tests
         working-directory: backend
         env:
-          JWT_SECRET: ${{ env.JWT_SECRET }}
+          JWT_SECRET_BASE64: ${{ env.JWT_SECRET_BASE64 }}
         run: mvn -B test
 
   docker-build-push:
