--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -12,6 +12,6 @@ management.endpoint.health.show-details=never
 management.server.port=8081
 
 # JWT
-jwt.secret=${JWT_SECRET:change_me}
+jwt.secret-base64=${JWT_SECRET_BASE64:}
 jwt.expiration=86400000
 server.port=8081
